--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
   <div class="s5-text">
     <h2>一起透過名字<span>回家</span></h2>
-    <p>&nbsp&nbsp&nbsp經過大分事件後的集團移住後，丹社群被迫遷往東部移動，經由關門古道，來到花蓮一帶。<br><br>&nbsp&nbsp&nbsp遷完後，有族人試圖遷回asang(舊部落)，但最終還是被舊部落駐警所驅趕走。<br><br>&nbsp&nbsp&nbsp又經過超過半個世紀，後代族人對於關門古道或說回asang的路，早已忘得一乾二淨，僅有幾個獵人還依稀知道路徑。<br><br>
+    <p>&nbsp&nbsp&nbsp經過大分事件後的集團移住政策，丹社群被迫遷往東部移動，經由關門古道，來到花蓮一帶。<br><br>&nbsp&nbsp&nbsp遷完後，有族人試圖遷回asang(舊部落)，但最終還是被舊部落駐警所驅趕走。<br><br>&nbsp&nbsp&nbsp又經過超過半個世紀，後代族人對於關門古道或說回asang的路，早已忘得一乾二淨，僅有幾個獵人還依稀知道路徑。<br><br>
     &nbsp&nbsp&nbsp雖然年輕人外流，部落政治紛擾，仍有一群青年，抱持著回家的心情，開始透過文獻、訪談跟實踐，調查回家的路線，並於2018年正式踏上旅程，直到現年仍在進行著。
     </p>
   </div>
