--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <p class="name1 bg-name"  id="Soqluman" data-name="Soqluman">Soqluman</p>
           <p class="name2 bg-name"  id="TakiVatan" data-name="TakiVatan">TakiVatan</p>
           <p class="name3 bg-name " id="Takiludun"  data-name="Takiludun">Takiludun</p>
-          <p class="name4 bg-name " id="Tangikulan"  data-name="Tangikulan">Takistaulan</p>
+          <p class="name4 bg-name " id="Takistaulan"  data-name="Takistaulan">Takistaulan</p>
           <p class="name5 bg-name " id="Taisnunan"  data-name="Taisnunan">Taisnunan</p>
           <p class="name6 bg-name " id="Balincinan"  data-name="Balincinan">Balincinan</p>
           <p class="name7 bg-name " id="Kusinavan"  data-name="Kusinavan">Kusinavan</p>
